Provide persistence layer to store userId and tokenId
