# core/model/src/main/kotlin/com/shadowflight/model/authentication/PAT.kt
@@ -4,7 +4,8 @@ import java.time.OffsetDateTime
 
 data class PAT(
     val accessToken: String,
+    val tokenId: String,
     val expirationDate: OffsetDateTime
 )
 
-fun PAT.didTokenExpired() = expirationDate.isBefore(OffsetDateTime.now())
+fun PAT.didTokenExpire() = expirationDate.isBefore(OffsetDateTime.now())
